fix(which-key): truncation + color sub-chords

--- a/panels/which-key.scss
+++ b/panels/which-key.scss
@@ -12,6 +12,7 @@
         .keys         { color: $base0B; }
         .separators   { color: $base03; font-family: $icon-font; }
         .descriptions { color: $base0D; }
+        .sub-chords   { color: $base08; }
     }
 }
 
